El juego queda con el panel más pequeño en la esquina superior derecha, controles de pausa y salida, y sonidos de acierto/error significativamente más breves

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <canvas id="gameCanvas"></canvas>
 
     <div class="ui-container" id="gameUI">
+        <div class="control-bar">
+            <button id="pauseButton" class="control-btn" aria-label="Pausar juego">Pausar</button>
+            <button id="exitQuickButton" class="control-btn danger" aria-label="Salir del juego">Salir</button>
+        </div>
         <h1>¡Navega a la Isla de Multiplicación!</h1>
         <p class="question-text" id="questionDisplay">¡Preparando el viaje!</p>
         <div class="calculator-display" id="calculatorDisplay">0</div>
