Refactor game interface: reorganize HTML structure, enhance audio system, and improve timer functionality. Update styles for better layout and responsiveness, including new difficulty selector and shark warning display.

--- a/index-modular.html
+++ b/index-modular.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aventura de Multiplicación 3D</title>
+    <title>Aventura de Multiplicación 3D - Versión Modular</title>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
@@ -64,6 +64,7 @@
         <button id="exitButton" class="dialog-button">Salir</button>
     </div>
 
-    <script src="script.js"></script>
+    <!-- Versión modular - requiere servidor local -->
+    <script type="module" src="js/app.js"></script>
 </body>
 </html>
